# NumericalMethodsForDiffEq

./: .gitignore
implementation/: Makefile  build_binaries.sh
implementation/examples/: rocket_complex.c  rocket_complex.h  rocket_esp32c3.c  rocket_nrf52840.c  rocket_stm32_fast.c  rocket_stm32_slow.c  rocket_x86.c
implementation/linker/: linker_esp32c3.ld  linker_nrf52840.ld  linker_stm32.ld
implementation/rocket_pio/: platformio.ini  upload.sh
implementation/rocket_pio/src/: main.cpp
implementation/rocket_pio_stm32/: platformio.ini  upload.sh
implementation/rocket_pio_stm32/include/: ode_solver.h
implementation/rocket_pio_stm32/src/: main.cpp  mini_rtt.c
implementation/rocket_rs_stm32/: Cargo.toml  README.md  build.rs  euler.csv  rk4.csv
implementation/rocket_rs_stm32/.cargo/: config.toml
implementation/rocket_rs_stm32/src/: lib.rs  ode.rs  rocket.rs  runtime.rs
implementation/scripts/: build_binaries.sh  build_hello.sh  build_nrf.sh  test_link.ld
implementation/src/: euler_forward.c  mini_rtt.c  rk4.c
implementation/startup/: startup_arm.c  startup_riscv.c
implementation/utils/: plot_rocket.py
matlab_heatmaps/: error_map.m  error_map_RK3_interactive.m  error_map_interactive.m
presentation/: application.py  bootstrap_venv.py  env.setup.toml  euler.py  main.py  manim.cfg  presentation_report.md  problem.py  rk4.py  rk4_explain.py  rk4_landscape.py  theme.py  title.py
