[package]
name = "rocket_rs_stm32"
version = "0.1.0"
edition = "2021"
description = "no_std STM32G474 rocket simulation port from PlatformIO C implementation"
license = "MIT"
build = "build.rs"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = "0.5"

[profile.dev]
opt-level = 1
lto = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
